feat: 完整实现数据库集成与音频分类系统
🎵 核心功能:
- SQLite数据库支持，音频文件信息持久化存储
- 音频分类系统(dialogue/environment/theme)
- 项目关联和文件验证接口

🎮 用户体验优化:
- 智能信息面板(片段/项目信息切换)
- 播放控制优化(按钮位置调整)
- 空格键快捷键播放/暂停
- 自动清理临时预览文件

🔧 音频编辑增强:
- 片段名称实时编辑
- 音量控制(0-200%)
- 淡入淡出时间设置
- 详细信息显示

🛠️ 技术改进:
- 完善错误处理和状态管理
- 改进音频元素生命周期管理
- 统一文件路径和命名规范
- 新增文件验证API接口

🐛 问题修复:
- 修复播放按钮loading状态卡死
- 解决音频元素事件监听器冲突
- 修复预览文件删除路径问题
- 改进音频加载错误处理

📁 项目优化:
- 完善.gitignore配置
- 清理临时文件和调试目录
- 更新技术架构文档

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,25 @@ coverage/
 # Others
 .idea/
 *.swp
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Audio files and generated content
+uploads/
+outputs/
+exports/
+projects/
+
+# Preview and temporary audio files
+preview_*.wav
+preview_*.mp3
+temp_*.wav
+temp_*.mp3
+
+# Debug and temporary files
+debug/
+temp/
+*.tmp
